// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TopAppBar playground 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      css={[Function]}
      role="banner"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "brixqc",
            "next": undefined,
            "styles": "
  
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
;;
  flex-grow: 0;
  justify-content: flex-start;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={[Function]}
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
        <div
          css={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dqwrps",
                "next": undefined,
                "styles": "
  margin: auto;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: default;
",
                "toString": [Function],
              }
            }
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        css={[Function]}
      />
      <div
        css={
          Object {
            "map": undefined,
            "name": "1etftic",
            "next": undefined,
            "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
",
            "toString": [Function],
          }
        }
      >
        <div
          role="button"
        >
          <div
            css={[Function]}
            data-testid="userMenu"
          >
            <button
              css={[Function]}
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                css={[Function]}
              >
                <span
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  css={[Function]}
                >
                  <span>
                    <span
                      css={[Function]}
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Additional Tools 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      css={[Function]}
      role="banner"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "brixqc",
            "next": undefined,
            "styles": "
  
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
;;
  flex-grow: 0;
  justify-content: flex-start;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={[Function]}
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
        <div
          css={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dqwrps",
                "next": undefined,
                "styles": "
  margin: auto;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: default;
",
                "toString": [Function],
              }
            }
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        css={[Function]}
      >
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "position": "relative",
              "width": "fill-available",
            }
          }
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <div
                css={
                  Object {
                    "width": "100% ",
                  }
                }
              >
                <input
                  css={[Function]}
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        css={
          Object {
            "map": undefined,
            "name": "1etftic",
            "next": undefined,
            "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
",
            "toString": [Function],
          }
        }
      >
        <div
          role="button"
        >
          <div
            css={[Function]}
            data-testid="userMenu"
          >
            <button
              css={[Function]}
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                css={[Function]}
              >
                <span
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  css={[Function]}
                >
                  <span>
                    <span
                      css={[Function]}
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Dark theme enabled 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      css={[Function]}
      role="banner"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "brixqc",
            "next": undefined,
            "styles": "
  
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
;;
  flex-grow: 0;
  justify-content: flex-start;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={[Function]}
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
        <div
          css={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dqwrps",
                "next": undefined,
                "styles": "
  margin: auto;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: default;
",
                "toString": [Function],
              }
            }
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        css={[Function]}
      />
      <div
        css={
          Object {
            "map": undefined,
            "name": "1etftic",
            "next": undefined,
            "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
",
            "toString": [Function],
          }
        }
      >
        <div
          role="button"
        >
          <div
            css={[Function]}
            data-testid="userMenu"
          >
            <button
              css={[Function]}
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                css={[Function]}
              >
                <span
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  css={[Function]}
                >
                  <span>
                    <span
                      css={[Function]}
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopAppBar with Logo Placeholder 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      css={[Function]}
      role="banner"
    >
      <div
        css={
          Object {
            "map": undefined,
            "name": "brixqc",
            "next": undefined,
            "styles": "
  
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
;;
  flex-grow: 0;
  justify-content: flex-start;
",
            "toString": [Function],
          }
        }
      >
        <div
          css={[Function]}
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
        <div
          css={[Function]}
        >
          <div
            css={
              Object {
                "map": undefined,
                "name": "1dqwrps",
                "next": undefined,
                "styles": "
  margin: auto;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: default;
",
                "toString": [Function],
              }
            }
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        css={[Function]}
      />
      <div
        css={
          Object {
            "map": undefined,
            "name": "1etftic",
            "next": undefined,
            "styles": "
  
  
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
;;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-content: center;
;;
  flex-wrap: nowrap;
",
            "toString": [Function],
          }
        }
      >
        <div
          role="button"
        >
          <div
            css={[Function]}
            data-testid="userMenu"
          >
            <button
              css={[Function]}
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                css={[Function]}
              >
                <span
                  css={[Function]}
                >
                  <div
                    css={[Function]}
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  css={[Function]}
                >
                  <span>
                    <span
                      css={[Function]}
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
